# ChangeLog for app-vim/fluxbox-syntax
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-vim/fluxbox-syntax/ChangeLog,v 1.18 2009/07/01 14:58:06 armin76 Exp $

  01 Jul 2009; Raúl Porcel <armin76@gentoo.org> fluxbox-syntax-1.5.ebuild:
  arm stable

  16 Mar 2009; Raúl Porcel <armin76@gentoo.org> fluxbox-syntax-1.5.ebuild:
  Add ~arm

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  07 Dec 2006; Diego Pettenò <flameeyes@gentoo.org>
  fluxbox-syntax-1.5.ebuild:
  Add ~x86-fbsd keyword as per bug #156873. Thanks to Mark Kowarsky
  (mark_alec) for reporting.

  22 Oct 2006; Jeroen Roovers <jer@gentoo.org> fluxbox-syntax-1.5.ebuild:
  Stable for HPPA.

  07 Apr 2006; Bryan Østergaard <kloeri@gentoo.org metadata.xml:
  Remove ciaranm from metadata.xml.

  24 May 2005; Joseph Jezak <josejx@gentoo.org> fluxbox-syntax-1.5.ebuild:
  Marked ppc stable for bug #93209.

  19 May 2005; Rene Nussbaumer <killerfox@gentoo.org>
  fluxbox-syntax-1.5.ebuild:
  Added ~hppa; bug #93209

  06 Apr 2005; Markus Rothe <corsair@gentoo.org> fluxbox-syntax-1.5.ebuild:
  Stable on ppc64

  18 Feb 2005; Tom Martin <slarti@gentoo.org> fluxbox-syntax-1.5.ebuild:
  amd64 stable.

  18 Feb 2005; Tom Martin <slarti@gentoo.org> fluxbox-syntax-1.5.ebuild:
  amd64 stable.

  13 Feb 2005; Markus Rothe <corsair@gentoo.org> fluxbox-syntax-1.5.ebuild:
  Added ~ppc64 to KEYWORDS

  10 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org>
  fluxbox-syntax-1.5.ebuild:
  x86 sparc mips stable

  07 Dec 2004; Tom Martin <slarti@gentoo.org> fluxbox-syntax-1.5.ebuild:
  Marked ~amd64.

*fluxbox-syntax-1.5 (18 Nov 2004)

  18 Nov 2004; Ciaran McCreesh <ciaranm@gentoo.org>
  +fluxbox-syntax-1.5.ebuild:
  Version bump. Change ftdetect rules slightly, bug #71197

  15 Oct 2004; David Holm <dholm@gentoo.org> fluxbox-syntax-1.4.ebuild:
  Added to ~ppc.

  07 Oct 2004; Ciaran McCreesh <ciaranm@gentoo.org>