@@ -1,6 +1,10 @@
 # ChangeLog for app-vim/fluxbox-syntax
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-vim/fluxbox-syntax/ChangeLog,v 1.18 2009/07/01 14:58:06 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-vim/fluxbox-syntax/ChangeLog,v 1.19 2009/12/17 10:26:27 fauli Exp $
+
+  17 Dec 2009; Christian Faulhammer <fauli@gentoo.org>
+  fluxbox-syntax-1.4.ebuild, fluxbox-syntax-1.5.ebuild:
+  QA: add prefix keywords
 
   01 Jul 2009; Raúl Porcel <armin76@gentoo.org> fluxbox-syntax-1.5.ebuild:
   arm stable
